--- a/Mod/src/main/resources/assets/nerfeedmod/lang/en_us.json
+++ b/Mod/src/main/resources/assets/nerfeedmod/lang/en_us.json
@@ -5,5 +5,6 @@
     "item.minecraft.potion.effect.alcohol": "Potion of Alcohol",
     "effect.nerfeedmod.vodka": "Vodka Effect",
     "item.minecraft.potion.effect.vodka": "Vodka",
-    "item.nerfeedmod.vodka_potion.effect.empty": "Vodka"
+    "item.nerfeedmod.vodka_potion.effect.empty": "Vodka",
+    "item.nerfeedmod.alcoholic_spawn_egg": "Alcoholic Spawn Egg"
 }
