--- a/Mod/src/main/resources/assets/nerfeedmod/lang/ru_ru.json
+++ b/Mod/src/main/resources/assets/nerfeedmod/lang/ru_ru.json
@@ -5,5 +5,6 @@
     "item.minecraft.potion.effect.alcohol": "Зелье спирта",
     "effect.nerfeedmod.vodka": "Эффект водки",
     "item.minecraft.potion.effect.vodka": "Водка",
-    "item.nerfeedmod.vodka_potion.effect.empty": "Водка"
+    "item.nerfeedmod.vodka_potion.effect.empty": "Водка",
+    "item.nerfeedmod.alcoholic_spawn_egg": "Яйцо спавна алкоголика"
 }
