--- a/Mod/src/main/resources/assets/nerfeedmod/lang/ru_ru.json
+++ b/Mod/src/main/resources/assets/nerfeedmod/lang/ru_ru.json
@@ -6,5 +6,8 @@
     "effect.nerfeedmod.vodka": "Эффект водки",
     "item.minecraft.potion.effect.vodka": "Водка",
     "item.nerfeedmod.vodka_potion.effect.empty": "Водка",
+    "effect.nerfeedmod.vino": "Эффект вина",
+    "item.minecraft.potion.effect.vino": "Вино",
+    "item.nerfeedmod.vino_potion.effect.empty": "Вино",
     "item.nerfeedmod.alcoholic_spawn_egg": "Яйцо спавна алкоголика"
 }
