--- a/Mod/src/main/resources/assets/nerfeedmod/lang/ru_ru.json
+++ b/Mod/src/main/resources/assets/nerfeedmod/lang/ru_ru.json
@@ -12,5 +12,6 @@
     "item.nerfeedmod.alcoholic_spawn_egg": "Яйцо спавна алкоголика",
     "block.nerfeedmod.shot_glasses": "Рюмки",
     "item.nerfeedmod.grape": "Виноград",
-    "block.nerfeedmod.grape_bush": "Виноградный куст"
+    "block.nerfeedmod.grape_bush": "Виноградный куст",
+    "item.nerfeedmod.mug_of_beer.effect.empty": "Пиво"
 }
