--- a/Mod/src/main/resources/assets/nerfeedmod/lang/en_us.json
+++ b/Mod/src/main/resources/assets/nerfeedmod/lang/en_us.json
@@ -13,5 +13,7 @@
     "block.nerfeedmod.shot_glasses": "Shot glasses",
     "item.nerfeedmod.grape": "Grape",
     "block.nerfeedmod.grape_bush": "Grape Bush",
-    "item.nerfeedmod.mug_of_beer.effect.empty": "Beer"
+    "item.nerfeedmod.mug_of_beer.effect.empty": "Beer",
+    "item.nerfeedmod.dried_barley": "Dried barley",
+    "item.nerfeedmod.barley": "Barley"
 }
