--- a/Mod/src/main/resources/assets/nerfeedmod/lang/ru_ru.json
+++ b/Mod/src/main/resources/assets/nerfeedmod/lang/ru_ru.json
@@ -15,5 +15,8 @@
     "block.nerfeedmod.grape_bush": "Виноградный куст",
     "item.nerfeedmod.mug_of_beer.effect.empty": "Пиво",
         "item.nerfeedmod.dried_barley": "Сушенный ячмень",
-    "item.nerfeedmod.barley": "Ячмень"
+    "item.nerfeedmod.barley": "Ячмень",
+    "item.nerfeedmod.barley_seeds": "Семена ячменя",
+    "item.nerfeedmod.cucumber": "Огурец",
+    "item.nerfeedmod.cucumber_seeds": "Семена огурца" 
 }
