--- a/Mod/src/main/resources/assets/nerfeedmod/lang/en_us.json
+++ b/Mod/src/main/resources/assets/nerfeedmod/lang/en_us.json
@@ -18,5 +18,7 @@
     "item.nerfeedmod.barley": "Barley",
     "item.nerfeedmod.barley_seeds": "Barley seeds",
     "item.nerfeedmod.cucumber": "Cucumber",
-    "item.nerfeedmod.cucumber_seeds": "Cucumber seeds" 
+    "item.nerfeedmod.cucumber_seeds": "Cucumber seeds",
+    "item.nerfeedmod.salt": "Salt",
+    "item.nerfeedmod.pickled_cucumbers.effect.empty": "Pickled cucumbers"
 }
