--- a/Mod/src/main/resources/assets/nerfeedmod/lang/en_us.json
+++ b/Mod/src/main/resources/assets/nerfeedmod/lang/en_us.json
@@ -20,5 +20,6 @@
     "item.nerfeedmod.cucumber": "Cucumber",
     "item.nerfeedmod.cucumber_seeds": "Cucumber seeds",
     "item.nerfeedmod.salt": "Salt",
-    "item.nerfeedmod.pickled_cucumbers.effect.empty": "Pickled cucumbers"
+    "item.nerfeedmod.pickled_cucumbers.effect.empty": "Pickled cucumbers",
+    "item.nerfeedmod.beer_brewing_machine_item": "Beer brewing Machine"
 }
